src/objects/RussianWebServerLog__c.object
<CustomObject>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>ErrorMessage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HttpResponseCode__c</fullName>
        <label>HttpResponseCode</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ResubmitNumber__c</fullName>
        <label>ResubmitNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XMLRequest__c</fullName>
        <label>XMLRequest</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>XMLResponse__c</fullName>
        <label>XMLResponse</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>RussianWebServerLog</label>
    <nameField>
        <label>RussianWebServerLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RussianWebServerLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>